# zrpc

./: Cargo.toml  GETTING_STARTED.md  README.md  test.rs
examples/accounting-client/: Cargo.toml
examples/accounting-client/src/: main.rs
examples/accounting-server/: Cargo.toml
examples/accounting-server/src/: main.rs
examples/base_client/: Cargo.toml
examples/base_client/src/: main.rs
examples/base_server/: Cargo.toml
examples/base_server/src/: main.rs
examples/kc-client/: Cargo.toml
examples/kc-client/src/: main.rs
examples/kc-server/: Cargo.toml
examples/kc-server/src/: main.rs
examples/test-client/: Cargo.toml
examples/test-client/src/: main.rs
examples/test-domain/: Cargo.toml
examples/test-domain/src/: lib.rs
examples/test-server/: Cargo.toml
examples/test-server/src/: main.rs
src/: client.rs  error.rs  lib.rs  server.rs  utils.rs
src/middleware/: error.rs  mod.rs
src/models/: dt.rs  error_kind.rs  mod.rs  req.rs
src/transport/: tcp.rs
src/types/: dt.rs  mod.rs  proc_error.rs  req.rs
