[package]
name = "zrpc"
version = "0.1.0"
edition = "2021"

[features]
log = []

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.42.0", features = ["full"] }

[workspace]
members = ["examples/base_client", "examples/base_server"]
