[package]
name = "zrpc"
version = "0.1.0"
authors = ["Mikhail Matyushev <mikhail.matyushev@gmail.com>"]
edition = "2024"
description = "RPC framework"
license = "MIT"
repository = "https://github.com/BIERTONSTAFF/zrpc"


[features]
log = []

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.42.0", features = ["full"] }

[workspace]
members = ["examples/base_client", "examples/base_server"]
